// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitHubIssues View Snapshots renders correctly 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Cannot get Issues for some reason
  </Text>
</View>
`;

exports[`GitHubIssues View Snapshots renders correctly when \`error\` present, regardless of what else is present 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
      }
    }
  >
    Oops!
  </Text>
</View>
`;

exports[`GitHubIssues View Snapshots renders correctly when \`error\` present, regardless of whether issues are present 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
      }
    }
  >
    Oops!
  </Text>
</View>
`;

exports[`GitHubIssues View Snapshots renders correctly when error present, regardless of whether issues are present 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
      }
    }
  >
    Oops!
  </Text>
</View>
`;

exports[`GitHubIssues View Snapshots renders correctly when issuesLoading \`false\` and \`error\` present 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
      }
    }
  >
    Oops!
  </Text>
</View>
`;

exports[`GitHubIssues View Snapshots renders correctly when issuesLoading \`false\` and error present 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "red",
      }
    }
  >
    Oops!
  </Text>
</View>
`;

exports[`GitHubIssues View Snapshots renders correctly when issuesLoading \`false\` and issues are empty array 1`] = `
<View>
  <Issues
    issues={Array []}
  />
</View>
`;

exports[`GitHubIssues View Snapshots renders correctly when issuesLoading \`false\` and issues empty array 1`] = `
<View>
  <Issues
    issues={Array []}
  />
</View>
`;

exports[`GitHubIssues View Snapshots renders correctly when issuesLoading \`false\` and issues present 1`] = `
<View>
  <Issues
    issues={
      Array [
        Object {
          "bodyText": "",
          "id": "",
          "reactions": Array [],
          "title": "",
          "url": "",
        },
      ]
    }
  />
</View>
`;

exports[`GitHubIssues View Snapshots renders correctly when issuesLoading \`true\`, regardless of what else is present 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    Issues are currently loading...
  </Text>
</View>
`;
